@@ -1,3 +1,10 @@
+2003-12-02  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs-mime-magic:
+	* gnome-vfs.keys.in:
+	* gnome-vfs.mime: add support for application/x-gchempaint and
+	application/x-gcrystal (Closes: #126293)
+
 2003-12-01  Bastien Nocera  <hadess@hadess.net>
 
 	* man/Makefile.am: don't install the man page, it's outdated
